# Youtube-Shorts-Studio

./: .gitignore  LICENSE  README.md  REDESIGN_PLAN.md  STUDIO_README.md  config.example.yaml  pyproject.toml  requirements-studio.txt  requirements.txt  start_studio.ps1  studio.example.yaml
.claude/: launch.json
adaptive_reframe/: README.md  __init__.py  analyzer.py  classifier.py  cli.py  config.py  detectors.py  geometry.py  imaging.py  pipeline.py  renderer.py  strategies.py  types.py
studio/: __init__.py  __main__.py  captions.py  cloudflared.py  config.py  downloader.py  dpapi.py  health.py  jobs.py  llm.py  login_flow.py  login_setup.py  metadata.py  montage.py  pipeline.py  prepare.py  public_share.py  sample_modes.py  segmenter.py  server.py  server_connections.py  server_models.py  shorts.py  sponsorblock.py  subscribe.py  transcribe.py  vault.py
studio/assets/fonts/: README.md
studio/publishers/: __init__.py  base.py  edge_profile.py  facebook.py  instagram.py  meta_api.py  playwright_base.py  playwright_publisher.py  session_provider.py  tiktok.py  youtube.py
studio/thumbnails/: __init__.py  compose.py  cutout.py  frames.py  headline.py
studio/web/: app.js  index.html  style.css
tests/: test_caption_position.py  test_classifier.py  test_geometry.py  test_montage.py  test_no_overlap.py  test_segmenter.py  test_thumbnails.py
